// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Get single food item Retrieves a single food item 1`] = `
Object {
  "id": "c6f78568-fe23-47e4-8e65-55934199a39f",
  "imageUrlSmall": "https://beetroot.com",
  "name": "Beetroot",
  "primaryFoodInRecipe": Array [
    Object {
      "id": "0f7fb18e-ac1d-4023-b315-91ca7e29ce4a",
      "imageUrlSmall": "https://pickled-beetroot.com/image",
      "isVegan": true,
      "isVegetarian": false,
      "linkUrl": "https://pickled-beetroot.com",
      "name": "Pickled Beetroot",
    },
    Object {
      "id": "053c46cd-584e-46c5-a70d-b79b9ded3cca",
      "imageUrlSmall": "https://apple-beetroot-and-cheese.com/image",
      "isVegan": false,
      "isVegetarian": false,
      "linkUrl": "https://apple-beetroot-and-cheese.com",
      "name": "Apple, Beetroot & Meat",
    },
  ],
  "seasons": Array [
    Object {
      "id": "41bcbb3a-5599-4f0c-8da9-3144cc5be6de",
      "name": "January",
      "seasonIndex": 0,
    },
    Object {
      "id": "eec0b2bb-4fbd-46df-b905-8d2ee2fb991a",
      "name": "February",
      "seasonIndex": 1,
    },
  ],
  "secondaryFoodInRecipe": Array [],
}
`;

exports[`Get single food item when the food is a secondary food item in recipes Retrieves a single food item 1`] = `
Object {
  "id": "d1df368e-6ed1-4a50-bb7d-6163c15df1d3",
  "imageUrlSmall": "https://onion.com",
  "name": "Onion",
  "primaryFoodInRecipe": Array [],
  "seasons": Array [],
  "secondaryFoodInRecipe": Array [
    Object {
      "id": "fefc209f-ddaf-465d-941f-fe3fefa6b931",
      "imageUrlSmall": "https://apple-and-cheese.com/image",
      "isVegan": false,
      "isVegetarian": true,
      "linkUrl": "https://apple-and-cheese.com",
      "name": "Apple, Cheese & Onion",
    },
  ],
}
`;

exports[`Get single food item when the food is a secondary food item in recipes and the isVegan recipe is applied returns the expected result 1`] = `
Object {
  "id": "d1df368e-6ed1-4a50-bb7d-6163c15df1d3",
  "imageUrlSmall": "https://onion.com",
  "name": "Onion",
  "primaryFoodInRecipe": Array [],
  "seasons": Array [],
  "secondaryFoodInRecipe": Array [],
}
`;

exports[`Get single food item when the food is a secondary food item in recipes and the isVegetarian recipe is applied returns the expected result 1`] = `
Object {
  "id": "d1df368e-6ed1-4a50-bb7d-6163c15df1d3",
  "imageUrlSmall": "https://onion.com",
  "name": "Onion",
  "primaryFoodInRecipe": Array [],
  "seasons": Array [],
  "secondaryFoodInRecipe": Array [
    Object {
      "id": "fefc209f-ddaf-465d-941f-fe3fefa6b931",
      "imageUrlSmall": "https://apple-and-cheese.com/image",
      "isVegan": false,
      "isVegetarian": true,
      "linkUrl": "https://apple-and-cheese.com",
      "name": "Apple, Cheese & Onion",
    },
  ],
}
`;
